--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django==2.1.5
-Pillow==5.4.1
-psycopg2==2.7.7
-pytz==2018.9
-
+certifi==2018.10.15
+Django==2.1.2
+olefile==0.46
+Pillow==5.3.0
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
+pytz==2018.5
